Applied various patches from Jacques Le Roux for various i18n and l10n issues; Jira #OFBIZ-282
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5151 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/service/config/ServiceErrorUiLabels_fr.properties
+++ b/framework/service/config/ServiceErrorUiLabels_fr.properties
@@ -8,13 +8,16 @@
 ##		              for Localization of error messages
 ##
 ###################################################################
-# OFBiz UiLabel Properties used for errors messages in the 
+# OFBiz UiLabel Properties used for errors messages in the
 # Service module
 #
 ##################################################################
 # ServiceUtil
 ##################################################################
-serviceUtil.party_id_missing=Il manque la Party ID
-serviceUtil.no_permission_to_operation=Vous n'avez pas l'autorisation pour effectuer cette op\u00E9ration 
-serviceUtil.no_permission_to_run=Vous n'avez pas l'autorisation pour effectuer ce service
-serviceUtil.unable_to_cancel_job=Impossible d'annuler ce job
+#
+ModelService.following_required_parameter_missing = Le param\u00E8tre requis suivant manque :
+serviceUtil.no_permission_to_operation = Vous n'avez pas l'autorisation pour effectuer cette op\u00E9ration
+serviceUtil.no_permission_to_run = Vous n'avez pas l'autorisation pour effectuer ce service
+serviceUtil.party_id_missing = Il manque la Party ID
+serviceUtil.unable_to_cancel_job = Impossible d'annuler ce job
+serviceUtil.unable_to_cancel_job_retries = Impossible d'annuler les nouvelles tentatives de traitement par lot
