Added some ui label improvements from Jean-Luc Malet; Jira #OFBIZ-294
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5199 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels_fr.properties
+++ b/framework/common/config/CommonUiLabels_fr.properties
@@ -39,24 +39,26 @@ CommonAdd=Ajouter
 CommonAddA=Ajouter un
 CommonAddDefault=Ajouter les valeurs par d\u00E9faut
 CommonAddId=Ajouter la r\u00E9f\u00E9rence
-CommonAddNew=Cr\u00E9er un nouveau
-CommonAddProblem=Probl\u00E8me de cr\u00E9ation
+CommonAddNew=Ajouter un nouveau
+CommonAddProblem=Probl\u00e8me de cr\u00e9ation
+CommonAddress1=Adresse 1
+CommonAddress2=Adresse 2
 CommonAddressLine=Adresse
 CommonAddresses=Adresses
 CommonAll=Tous
-CommonAllDay=Chaque jour
+CommonAllDay=Journ\u00E9e enti\u00e8re
 CommonAllMethods=Toutes les m\u00E9thodes
-CommonAllWeek=Chaque semaine
-CommonAllowSolicitation=Accepte les solicitations
+CommonAllWeek=Semaine enti\u00e8re
+CommonAllowSolicitation=Accepte les sollicitations
 CommonAmount=Quantit\u00E9
-CommonAnd=et
+CommonAnd=Et
 CommonAny=Tous
-CommonAnyOrderStatus=Tout statut
-CommonAnyOrderType=Tout type
-CommonAnyReturnStatus=Tout Statut
-CommonAnyRoleType=Tout R\u00F4le
-CommonAnyStore=Toute marque
-CommonAnyWebSite=Tout Site
+CommonAnyOrderStatus=Tous statuts
+CommonAnyOrderType=Tous types
+CommonAnyReturnStatus=Tous Statuts
+CommonAnyRoleType=Tous R\u00f4les
+CommonAnyStore=Tous magasins
+CommonAnyWebSite=Tout Sites
 CommonApply=Valider
 CommonApril=avril
 CommonArea=Surface
@@ -64,7 +66,7 @@ CommonAreaCode=Indicatif de zone
 CommonAssociate=associ\u00E9
 CommonAt=\u00E0
 CommonAttentionName=Nom d'attention
-CommonAttn=A l'Attention de
+CommonAttn=A l'attention de
 CommonAugust=Ao\u00FBt
 CommonAvailable=Disponible
 CommonBack=Retour
@@ -85,7 +87,8 @@ CommonCity=Ville
 CommonClear=Effacer
 CommonClickHere=Cliquer ici
 CommonClose=Fermer
-CommonComingSoon=\u00C7a arrive bient\u00F4t!
+CommonCloseTab=+
+CommonComingSoon=\u00C7a arrive bient\u00F4t !
 CommonComment=Commentaire
 CommonComments=Commentaires
 CommonConfiguration=Configuration
@@ -95,7 +98,7 @@ CommonContactUs=Contactez-nous
 CommonContent=Contenu
 CommonContinue=Continuer
 CommonCopy=Copier
-CommonCouldBeUsedAs=Peut-\u00EAtre utilis\u00E9 comme
+CommonCouldBeUsedAs=Peut \u00EAtre utilis\u00E9 comme
 CommonCountry=Pays
 CommonCreate=Cr\u00E9er
 CommonCreateNew=Nouveau
@@ -111,28 +114,28 @@ CommonDays=Jours
 CommonDebit=D\u00E9bit
 CommonDecember=D\u00E9cembre
 CommonDelete=Supprimer
-CommonDeleteAll=Supprimer tout
+CommonDeleteAll=Tout supprimer
 CommonDescription=Description
 CommonDetail=D\u00E9tail
 CommonDetails=D\u00E9tails
-CommonDisabled=non actif
+CommonDisabled=Non actif
 CommonDuplicate=Dupliquer
 CommonEdit=Editer
 CommonElementsFound=El\u00E9ments trouv\u00E9s
-CommonEmailPassword=Envoyer moi mon mot de passe par courriel
+CommonEmailPassword=Envoyez-moi mon mot de passe par courriel
 CommonEmailTo=Envoyer un email \u00E0
 CommonEmailType=Email type
-CommonEmails=Adr. Courriel
-CommonEnabled=Permis
+CommonEmails=Adr. courriel
+CommonEnabled=Disponible
 CommonEndDateTime=Date/Heure de fin
-CommonEventDate=date de l'\u00E9v\u00E9nement
+CommonEventDate=Date de l'\u00e9v\u00e9nement
 CommonExpire=Expiration
 CommonExpireAll=Expirer tous
 CommonExpireDate=Date d'expiration
 CommonExpires=Expir\u00E9s
-CommonExt=
-CommonFebruary=f\u00E9vrier\r\n
-CommonFieldsMarkedAreRequired=Les champs suivi d'une (*) sont obligatoire.
+CommonExt=Ext.
+CommonFebruary=f\u00E9vrier
+CommonFieldsMarkedAreRequired=Les champs suivis d'une (*) sont obligatoires.
 CommonFind=Rechercher
 CommonFindAll=Rech. tous
 CommonFinishDate=Date de fin
@@ -140,7 +143,7 @@ CommonFollowingErrorsOccurred=Les erreurs suivantes sont apparues
 CommonFollowingOccurred=Ce qui suit est apparu
 CommonFor=pour
 CommonForgotYourPassword=Vous avez oubli\u00E9 votre mot de passe
-CommonFormatDateFieldNotCorrect=La saisi d'un champ de date est incorrect , le format doit-\u00EAtre AAAA-mm-jj HH:mm:ss
+CommonFormatDateFieldNotCorrect=La saisie d'un champ de date est incorrecte, le format doit-\u00eatre AAAA-mm-jj HH:mm:ss
 CommonFormatDateTime=AAAA-MM-JJ  /  hh:mm:ss
 CommonFound=Trouv\u00E9
 CommonFriday=vendredi
@@ -148,8 +151,8 @@ CommonFrom=De
 CommonFromAddress=\u00E0 partir de l'adresse
 CommonFromDate=de la date
 CommonFromDateMissing=Date de d\u00E9but absente
-CommonFromDateNotValidDateTime=Format (date-heure) de la date de d\u00E9but non valide .
-CommonFromDateThruDate=de la date / jusqu'\u00E0 la date
+CommonFromDateNotValidDateTime=Format (date-heure) de la date de d\u00E9but non valide
+CommonFromDateThruDate=De la date / jusqu'\u00E0 la date
 CommonFromDateTime=\u00E0 partir de la date et  de l'heure
 CommonGetPasswordHint=Voir votre aide pour le mot de passe
 CommonGoBack=Retour
@@ -159,18 +162,18 @@ CommonHideFields=Cacher les zones de s\u00E9lection
 CommonHour=Heure
 CommonId=R\u00E9f.
 CommonIdAlreadyExist=Identifiant d\u00E9j\u00E0 existant
-CommonIdCode=Code r\u00E9f\u00E9rence
+CommonIdCode=Code de r\u00E9f\u00E9rence
 CommonIdentifier=Identifiant
 CommonIds=R\u00E9f\u00E9rences
 CommonInThe=Dans le
 CommonInformation=Information
-CommonInput=Saisi
-CommonInto=dans
+CommonInput=Saisie
+CommonInto=Dans
 CommonIntroductionDate=Date d'introduction
 CommonItem=ligne
-CommonJanuary=janvier
-CommonJuly=juillet
-CommonJune=juin
+CommonJanuary=Janvier
+CommonJuly=Juillet
+CommonJune=Juin
 CommonLanguageTitle=Langue
 CommonLarge=Large
 CommonLastUpdated=Derni\u00E8re mise \u00E0 jour
@@ -178,21 +181,22 @@ CommonLine=Ligne
 CommonList=Lister
 CommonListAll=Tout lister
 CommonLogin=Connexion
-CommonLoginHere=connectez vous
+CommonLoginHere=Connexion ici
 CommonLogout=Sortie
 CommonLookup=Rechercher
 CommonMain=Principal
-CommonManager=Gestionnaire
-CommonMarch=mars
+CommonManager=Responsable
+CommonMany=Beaucoup
+CommonMarch=Mars
 CommonMatched=Identique
-CommonMay=mai
+CommonMay=Mai
 CommonMayCreate=Cr\u00E9er
 CommonMayCreateNewAccountHere=Vous devez cr\u00E9er un nouveau compte
 CommonMedium=Moyen
 CommonMessage=Message
 CommonMethod=Mode d'envoi
 CommonMonday=lundi
-CommonMonth=mois
+CommonMonth=Mois
 CommonMore=Plus
 CommonMyStatus=Mon statut
 CommonN=N
@@ -204,34 +208,34 @@ CommonNewUser=Nouvel utilisateur
 CommonNext=Suivant
 CommonNo=Non
 CommonNoAddress=Aucune adresse
-CommonNoContactInformationOnFile=Pas d'information de contact sur le fichier
+CommonNoContactInformationOnFile=Pas d'information du contact sur le fichier
 CommonNoElementFound=aucun \u00E9l\u00E9ment trouv\u00E9
 CommonNoParent=Pas de parent
-CommonNoTaskAssigned=Vous n'avez actuellement aucune tache \u00E0 votre attention.
+CommonNoTaskAssigned=Vous n'avez actuellement aucune t\u00e2che \u00E0 votre attention.
 CommonNone=Aucun
 CommonNot=Pas
-CommonNotModifRecreat=ne peut-\u00EAtre modifi\u00E9 sauf re-cr\u00E9ation
+CommonNotModifRecreat=Ne peut \u00EAtre modifi\u00E9 sauf re-cr\u00E9ation
 CommonNotSet=Non choisi
-CommonNotYetImplemented=Pas encore d\u00E9velopper !!
+CommonNotYetImplemented=Pas encore d\u00E9velopp\u00E9 !
 CommonNotYou=Pas vous
 CommonNote=Note
 CommonNotes=Notes
-CommonNovember=novembre
+CommonNovember=Novembre
 CommonNow=Maintenant
-CommonOctober=octobre
-CommonOf=de
-CommonOn=sur
-CommonOpenNewWindow=Ouvrez une nouvelle fen\u00EAtre
-CommonOpenPageNewWindow=ouvrir la page dans une nouvelle fen\u00EAtre
+CommonOctober=Octobre
+CommonOf=De
+CommonOn=Sur
+CommonOpenNewWindow=Ouvrir une nouvelle fen\u00EAtre
+CommonOpenPageNewWindow=Ouvrir la page dans une nouvelle fen\u00EAtre
 CommonOptions=Options
-CommonOr=ou
+CommonOr=Ou
 CommonOrder=Commande
 CommonOrders=Commandes
 CommonOverridesSelection=\u00E9crase l'un ou l'autre des choix ci-dessus
 CommonPage=Page
 CommonPartyID=R\u00E9f. de l'acteur
-CommonPassword=Mot de passe:
-CommonPerform=Executer
+CommonPassword=Mot de passe :
+CommonPerform=Ex\u00E9cuter
 CommonPermissionError=Erreur de droits d'acc\u00E8s, autorisations insuffisantes
 CommonPerson=Personne
 CommonPrevious=Pr\u00E9c\u00E9dent
@@ -239,11 +243,11 @@ CommonPriority=Priorit\u00E9
 CommonProfile=Profil
 CommonQualifier=Qualifier
 CommonQuantity=Quantit\u00E9
-CommonQuarter=Quart
+CommonQuarter=Trimestre
 CommonQuickAdd=Ajout rapide
-CommonQuickAddList=Ajout rapide \u00E0 la liste d'achat
+CommonQuickAddList=Ajout rapide \u00e0 la liste
 CommonReady=Pr\u00EAt
-CommonReceive=Re\u00E7u
+CommonReceive=Recevoir
 CommonReceived=Re\u00E7u
 CommonRed=Rouge
 CommonRefresh=Rafra\u00EEchir
@@ -253,7 +257,7 @@ CommonRemove=Supprimer
 CommonRemoveExpired=Supp. les <expir\u00E9s>
 CommonReports=Etats
 CommonRequired=Obligatoire
-CommonRequiredFieldsFoundEmpty=Les champs requis suivants sont vides
+CommonRequiredFieldsFoundEmpty=Champs obligatoires vides
 CommonReset=Reset
 CommonResultLookup=R\u00E9sultat de la recherche
 CommonReturn=Retour
@@ -261,28 +265,28 @@ CommonReturnStatus=Statut du retour
 CommonReview=Revoir
 CommonRun=D\u00E9marrer
 CommonSaturday=samedi
-CommonSave=Enrg
-CommonSavings=Sauvegarder
+CommonSave=Enregistrer
+CommonSavings=Sauvegardes
 CommonSearch=Rechercher
 CommonSearchResultfor=Rechercher les r\u00E9sultats pour
 CommonSecurity=S\u00E9curit\u00E9
-CommonSelectAll=S\u00E9lectionne tout
+CommonSelectAll=Tout s\u00e9lectionner 
 CommonSelectOne=S\u00E9lectionnez en une
 CommonSelected=S\u00E9lectionner
 CommonSelection=S\u00E9lection
 CommonSend=Envoyer
 CommonSendDate=Date d'envoi
-CommonSendEmail=envoyer email
-CommonSeptember=septembre
-CommonSequence=suite
+CommonSendEmail=Envoyer email
+CommonSeptember=Septembre
+CommonSequence=s\u00e9quence
 CommonSequenceNum=N\u00B0 de s\u00E9quence
 CommonSet=Set
 CommonSetNowEmpty=(Sera positionn\u00E9 \u00E0 aujourd'hui si vide)
 CommonShow=Montrer
 CommonShowAll=Montrer tout
-CommonShowAllRecords=Visualiser tous les enregistrements
-CommonShowLookupFields=Monter les zones de s\u00E9lection
-CommonSince=depuis
+CommonShowAllRecords=Montrer tous les enregistrements
+CommonShowLookupFields=Montrer les zones de s\u00e9lection
+CommonSince=Depuis
 CommonSmall=Petit
 CommonSorryYouCannotSend=D\u00E9sol\u00E9, vous ne pouvez envoyer cette page \u00E0 un ami. S\u00E9lectionnez plut\u00F4t \u00E0 partir d'un cat\u00E9gorie ou d'un article
 CommonSpecified=Sp\u00E9cifi\u00E9
@@ -290,21 +294,21 @@ CommonStartDate=Date de d\u00E9but
 CommonStartDateTime=Date/heure de d\u00E9but
 CommonState=Etat
 CommonStateProvince=Etat/Province
-CommonStats=Etats
+CommonStats=Statistiques
 CommonStatus=Statut
-CommonSubTitle=Sous titre
-CommonSubTotal=Sous total
+CommonSubTitle=Sous-titre
+CommonSubTotal=Sous-total
 CommonSubmit=Soumettre
-CommonSubtotal=Sous total
 CommonSunday=dimanche
-CommonTellAFriend=Dites le \u00E0 un ami
+CommonTellAFriend=Dites-le \u00e0 un ami
+CommonTest=Test
 CommonTheFollowingErrorsOccurred=Les erreurs suivantes sont apparues
 CommonTheFollowingOccurred=Ceci est advenu
 CommonTheFollowingRequiredFieldsWhereFoundEmpty=Les champs suivants sont vides
-CommonTheOpenForBusinessProject=Le projet Open For Business
-CommonThis=Ceci
+CommonTheOpenForBusinessProject=Le Projet Open For Business
+CommonThis=Ce
 CommonThru=Jusqu'\u00E0
-CommonThruDate=jusqu'\u00E0 la date
+CommonThruDate=Jusqu'\u00E0 la date
 CommonThruDateTime=jusqu'\u00E0 la date & l'heure
 CommonThursday=jeudi
 CommonTime=Heure
@@ -321,21 +325,27 @@ CommonUpdate=Mettre \u00E0 jour
 CommonUpdateLink=Mettre \u00E0 jour le lien
 CommonUpdated=Mise \u00E0 jour
 CommonUpdatedEffectiveThru=Mise \u00E0 jour effective \u00E0 travers
-CommonUsed=Utiliser
-CommonUsedAs=Utiliser comme
+CommonUsed=Utilis\u00e9
+CommonUsedAs=Utilis\u00e9 comme
 CommonUsername=Nom d'utilisateur
 CommonValidate=Valider
+CommonValidFromDate=Valide \u00e0 partir de
+CommonValidityProblem=Probl\u00e8me de validit\u00E9
+CommonValidThruDate=Valide jusqu'\u00e0 
++CommonValidThruDate=Valide jusqu'\u00e0
 CommonValidityProblem=Probleme de validit\u00E9
 CommonValue=Valeur
 CommonView=Voir
-CommonViewCalendar=Voir Calendrier
+CommonViewRequest=Voir la requ\u00eate
+CommonViewCalendar=Voir le calendrier
+CommonViewRequest=Voir la requ\u00eate
 CommonVolume=Volume
 CommonWednesday=mercredi
 CommonWeek=semaine
 CommonWelcome=Bienvenue
 CommonWhere=O\u00F9
-CommonWorkflowActivityUser=Actions du workflow associ\u00E9s \u00E0 l'utilisateur
-CommonWorkflowActivityUserRole=Actions du workflow associ\u00E9s au r\u00F4le de l'utilisateur
+CommonWorkflowActivityUser=Actions du workflow associ\u00E9es \u00E0 l'utilisateur
+CommonWorkflowActivityUserRole=Actions du workflow associ\u00E9es au r\u00F4le de l'utilisateur
 CommonY=O
 CommonYes=Oui
 CommonYouremail=Votre email
@@ -354,15 +364,15 @@ PartyContactPurpose=But de contact d'un acteur
 PartyPartyID=R\u00E9f. d'acteur
 WebTools=Adm. Sys.
 WorkEffort=T\u00E2che
-bu=Bulgare
-cz=Tcheck
-de=Allemand
-en=Anglais
-en_GB=Anglais GB
-es=Espagnol
-fr=Fran\u00E7ais
-gr=Grec
-pt=Portugais
-pt_BR=Portugais Br\u00E9sil
-pt_PT=Portugais Portugal
-zh=Chinois
+bu=bulgare
+cz=tch\u00e8que
+de=allemand
+en=anglais
+en_GB=anglais GB
+es=espagnol
+fr=fran\u00e7ais
+gr=grec
+pt=portugais
+pt_PT=portugais Portugal
+pt_BR=portugais Br\u00e9sil
+zh=chinois
