A number of i18n changes from Jean-Luc Malet; Jira #OFBIZ-298
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5201 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels_fr.properties
+++ b/applications/party/config/PartyUiLabels_fr.properties
@@ -99,27 +99,27 @@ PartyAccount=Compte
 PartyAdditionalPartyEntry=Suppl\u00e9ments d'infos. sur l'acteur
 PartyAddPermissionManuallyToSecurityGroup=Ajouter une permission (manuellement) au groupe de s\u00e9curit\u00e9
 PartyAddPermissionToSecurityGroup=Ajouter une permission (\u00e0 partir de la liste) au groupe de s\u00e9curit\u00e9
-PartyActive=Active
+PartyActive=Actif (ve)
 PartyAddPurpose=Ajouter un objet
-PartyAddrAttnName=\u00e0 l'att.
+PartyAddrAttnName=\u00e0 l'attention de
 PartyAddressLine1=Ligne d'adresse 1
 PartyAddressLine1Missing=Ligne d'adresse 1 absente
 PartyAddressLine2=Ligne d'adresse 2
 PartyAddRole=Ajouter r\u00f4le
-PartyAddrToName=de
+PartyAddrToName=Ajouter au nom
 PartyAddToRole=Ajouter le r\u00f4le
 PartyAddUserLoginToSecurityGroup=Ajouter un utilisateur de connexion \u00e0 ce groupe de s\u00e9curit\u00e9
 PartyAvsString=Code AVS 
-PartyAreaCode=Area Code
+PartyAreaCode=Indicatif r\u00e9gional
 PartyAttentionName=\u00e0 l'attention de
 PartyBirthDate=Date de naissance
-PartyBirthDateMissingError=Format de la date de naissance non correct\: doit \u00EAtre yyyy-mm-dd, du type 1982-07-21
+PartyBirthDateMissingError=Format de la date de naissance incorrect\: doit \u00EAtre yyyy-mm-dd, du type 1982-07-21
 PartyBusinessPhone=T\u00e9l\u00e9phone Bureau
 PartyBank=Banque
-PartyCannotUpdateContactBecauseNotWithSpecifiedParty=Erreur: d\u00e9tail des coordonn\u00e9es non mise \u00e0 jour, elles ne correspondent pas \u00e0 l'acteur sp\u00e9cifi\u00e9.
+PartyCannotUpdateContactBecauseNotWithSpecifiedParty=Erreur: d\u00e9tail des coordonn\u00e9es non mises \u00e0 jour, elles ne correspondent pas \u00e0 l'acteur sp\u00e9cifi\u00e9.
 PartyChangeParty=Changer d'acteur
 PartyCity=Ville
-PartyCityMissing=ville absente
+PartyCityMissing=Ville absente
 PartyClient=Client
 PartyClientIP=IP du Client
 PartyClientUser=Client utilisateur
@@ -127,38 +127,41 @@ PartyComments=Commentaires
 PartyCommEvent=Communication
 PartyCommunications=Communications
 PartyCommunicationsWith=Communications avec
-PartyCompanyName=OFBiz: Gestionnaire d'acteur
+PartyCompanyName=OFBiz : Gestionnaire d'acteur
 PartyCompanySubtitle=un des \u00e9l\u00e9ments de la famille <<Open For Business>>, logiciel libre de gestion.
 PartyContactAllowSolicitation=Accepte les sollicitations
 PartyContactEffectiveThru=Effectif jusqu'\u00e0
 PartyContactExt=ext
 PartyContactInformation=Coordonn\u00e9es
+PartyContactInfo=Source du contact
+PartyContactInfoList=Contact Info (Email, URL, etc)
 PartyContactMechIdMissing=Identifiant coordonn\u00e9es absent
 PartyContactMechTypeIdMissing=Type de coordonn\u00e9es absent
 PartyContactMechNotFoundCannotDelete=Erreur: coordonn\u00e9es de l'acteur non trouv\u00e9es, suppression impossible.
 PartyContactNumber=Num\u00e9ro
 PartyContactNumberMissing=Num\u00e9ro de t\u00e9l\u00e9phone absent
 PartyContactPurposes=Objet des coordonn\u00e9es
-PartyContactTelephoneMissing=Coordonn\u00E9es t\u00E9l\u00E9phoniques absente
+PartyContactTelephoneMissing=Coordonn\u00E9es t\u00E9l\u00E9phoniques absentes
 PartyContactSolicitingOk=Accepte les sollicitations 
 PartyContactType=Type de coordonn\u00e9es
-PartyContentId=Contenu ID
+PartyContentId=Contenu identifiant
 PartyCookie=Cookie
 PartyCountryCode=Code pays
 PartyCountryMissing=Pays absent
-PartyCreateAddWebSiteRolePermissionError=Erreur s\u00e9curit\u00e9: pour ajouter un r\u00f4le de site web il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
-PartyCreateCommunicationEventPermissionError=Erreur s\u00e9curit\u00e9: pour cr\u00e9er une communication il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
-PartyCreateCommunicationEventPurposePermissionError=Erreur s\u00e9curit\u00e9: pour ajouter un objet \u00e0 un appel il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
-PartyCreateCommunicationEventRolePermissionError=Erreur s\u00e9curit\u00e9: pour ajouter un r\u00f4le \u00e0 une communication il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
-PartyCreatePartyClassificationPermissionError=Erreur s\u00e9curit\u00e9: pour ajouter une classification d'acteur il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
-PartyCreatePostalAddressBoundaryPermissionError=Erreur s\u00e9curit\u00e9: pour ajouter une adresse postal fronti\u00e8re il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
+PartyCreateAddWebSiteRolePermissionError=Erreur s\u00e9curit\u00e9 : pour ajouter un r\u00f4le de site web il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
+PartyCreateCommunicationEventPermissionError=Erreur s\u00e9curit\u00e9 : pour cr\u00e9er une communication il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
+PartyCreateCommunicationEventPurposePermissionError=Erreur s\u00e9curit\u00e9 : pour ajouter un objet \u00e0 un appel il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
+PartyCreateCommunicationEventRolePermissionError=Erreur s\u00e9curit\u00e9 : pour ajouter un r\u00f4le \u00e0 une communication il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
+PartyCreatePartyClassificationPermissionError=Erreur s\u00e9curit\u00e9 : pour ajouter une classification d'acteur il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
+PartyCreatePostalAddressBoundaryPermissionError=Erreur s\u00e9curit\u00e9 : pour ajouter une adresse postal fronti\u00e8re il faut avoir avoir la permission PARTYMGR_CREATE ou PARTYMGR_ADMIN.<br>
 PartyCreateNewContact=Cr\u00e9er de nouvelles coordonn\u00e9es
 PartyCreateNewCustomer=Cr\u00e9er un nouveau client
 PartyCreateNewEmployee=Cr\u00e9er un nouvel employ\u00e9
 PartyCreateNewParty=Cr\u00e9er un nouvel acteur
-PartyCreateNewPartyGroup=Cr\u00e9er un nouveau groupe d'acteur
+PartyCreateNewPartyGroup=Cr\u00e9er un nouveau groupe d'acteurs
 PartyCreateNewPerson=Cr\u00e9er une nouvelle personne
 PartyCreateNewSecurityGroup=Cr\u00e9er un nouveau groupe de s\u00e9curit\u00e9
+PartyCreatedDate=Date de cr\u00e9ation
 PartyCustomerRequest=N\u00b0 de requ\u00eate client
 PartyCybersourceAvsOver=Cybersource AVS Override
 PartyDisabled=INVALIDE
@@ -167,18 +170,19 @@ PartyEditSecurityGroupWithId=Edition du groupe de securit\u00e9 avec l'identifia
 PartyEftAccount=Compte EFT 
 PartyEmailAddress=Adresse E-mail
 PartyEmailAddressMissing=Adresse E-mail absente
-PartyEmailAddressNotFormattedCorrectly=Format de l'adresse E-mail non correct,il doit \u00eatre similaire \u00e0 foo@bar.com
+PartyEmailAddressNotFormattedCorrectly=Format de l'adresse E-mail incorrect, il doit \u00eatre similaire \u00e0 foo@bar.com
 PartyEnabled=VALIDE
 PartyEnteredDate=Date de saisie
-PartyEnterPasswordTwice=Vous devez enter votre mot de passe deux fois
+PartyEnterPasswordTwice=Vous devez entrer votre mot de passe deux fois
 PartyEventPurpose=Objet de l'appel
 PartyEventType=Mode de communication
 PartyFindParties=Recherche des acteurs
-PartyFindParty=Recherche d'acteurs
+PartyFindParty=Recherche d'acteur
 PartyFirstName=Pr\u00e9nom
 PartyFirstNameMissing=Pr\u00E9nom absent
 PartyFollowSession=Session suivante
 PartyGender=Sexe
+PartyGroupName=Nom du groupe
 PartyGroupNameMissing=Nom du groupe absent
 PartyHeight=Taille
 PartyHeightNotValidNumber=La taille n'est pas un nombre valide
@@ -186,10 +190,10 @@ PartyHideOld=Cacher l'historique
 PartyHitTracker=Enregistrement de pointage
 PartyHomePhone=T\u00e9l\u00e9phone Domicile
 PartyInformationNotFound=Pas d'information trouv\u00e9e
-PartyInitialLocale=% Initial Locale %
-PartyInitialReferer=% Initial Referer % 
-PartyInitialRequest=% Initial Request %
-PartyInitialUserAgent=% Initial User Agent %
+PartyInitialLocale= Origine
+PartyInitialReferer=R\u00e9f\u00e9rence initiale 
+PartyInitialRequest=Demande initiale
+PartyInitialUserAgent=Utilisateur initial
 PartyLastName=Nom
 PartyLastNameMissingError=Nom absent
 PartyLastVisit=Derni\u00e8re(s) connexion(s)
@@ -200,12 +204,12 @@ PartyManifestCompanyTitle=Titre de l'entreprise
 PartyManifestLogoUrl=Url du logo
 PartyManifestPolicies=Contitions de vente
 PartyMaritalStatus=Statut marital
-PartyMechPurposeTypeNotFound=Purpose Type not found with ID
+PartyMechPurposeTypeNotFound=Type d'usage non trouv\u00e9 avec la r\u00e9f
 PartyMemberRoles=Membre des r\u00f4les
-PartyMgrViewPermissionError=PartyMgrViewPermissionError Vous n'avez pas la permission de voir cette page. ("PARTYMGR_VIEW" ou "PARTYMGR_ADMIN" est n\u00e9cessaire)
-PartyMiddleInitial=Initiales
+PartyMgrViewPermissionError=Vous n'avez pas la permission de voir cette page. ("PARTYMGR_VIEW" ou "PARTYMGR_ADMIN" est n\u00e9cessaire)
+PartyMiddleInitial=Initiale
 PartyMothersMaidenName=Nom de jeune fille
-PartyMsgContactHavePurpose=Note: ces nouvelles coordonn\u00e9es auront pour usage
+PartyMsgContactHavePurpose=Note : ces nouvelles coordonn\u00e9es auront pour usage
 PartyMsgContactNotBelongToYou=Les coordonn\u00e9es sp\u00e9cifi\u00e9es ne sont pas de votre domaine, vous ne pouvez pas les voir ou les modifier.
 PartyName=Nom
 PartyNewTask=Nouvelle t\u00e2che
@@ -247,35 +251,38 @@ PartyPasswordMissing=mot de passe absent
 PartyPaymentMethodInformation=Mode de paiement  
 PartyPermissionSecurityGroupWithId=Permission du groupe de s\u00e9curit\u00e9 avec l'ident.
 PartyPermission=Permission
-PartyPermissionErrorForThisParty=Vous n'avez pas la permission d'effectuer cette op\u00e9ration pour cet acteur.<br>
+PartyPermissionErrorForThisParty=Vous n'avez pas la permission d'effectuer cette op\u00e9ration pour cet acteur.
 PartyPermissionId=Ident. permission 
 PartyPermissions=Permission
-PartyPersonalInformation=Information personnelle 
+PartyPersonalInformation=Information personnelle
+PartyPersonalTitle= Fonction
 PartyPhoneNumber=Num\u00e9ro de t\u00e9l\u00e9phone
+PartyPostal=Contact courrier
+PartyPostalCode=Code Postal
 PartyPostalCodeMissing=Code postal absent
 PartyPurposeTypeMissingCannotAdd=Objet des coordonn\u00e9es absent, il n'est pas possible d'ajouter
 PartyPurposeTypeMissingCannotRemove=Objet des coordonn\u00e9es absent, il n'y a rien \u00e0 supprimer
 PartyPurposeTypeNotFound=Type d'usage non trouv\u00e9 avec l'ident.
-PartyPushURL=URL envoy\u00e9 
+PartyPushURL=URL envoy\u00e9e 
 PartyProfile=Profil
-PartyProveinceInCanadaMissing=Province absente, et elle est obligtoire pour une adresse au canada.
+PartyProveinceInCanadaMissing=Province absente, et elle est obligtoire pour une adresse au Canada.
 PartyRelationships=Relation
-PartyRemoveCommunicationEventPurposePermissionError=Erreur s\u00e9curit\u00e9: pour supprimer l'objet d'un appel il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.<br>
-PartyRemoveCommunicationEventRolePermissionError=Erreur s\u00e9curit\u00e9: pour supprimer le r\u00f4le d'une communication il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.<br>
-PartyRemovePartyClassificationPermissionError=Erreur s\u00e9curit\u00e9: pour supprimer une classification d'acteur il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.<br>
-PartyRemovePartyRelationshipPermissionError=Erreur s\u00e9curit\u00e9: pour supprimer une relation inter-acteurs il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.<br>
-PartyRemovePostalAddressBoundaryPermissionError=Erreur s\u00e9curit\u00e9: pour supprimer une adresse postale fronti\u00e8re il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.<br>
-PartyRemoveWebSiteRolePermissionError=Erreur s\u00e9curit\u00e9: pour supprimer un r\u00f4le de site web il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.<br>
+PartyRemoveCommunicationEventPurposePermissionError=Erreur s\u00e9curit\u00e9 : pour supprimer l'objet d'un appel il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.
+PartyRemoveCommunicationEventRolePermissionError=Erreur s\u00e9curit\u00e9 : pour supprimer le r\u00f4le d'une communication il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.
+PartyRemovePartyClassificationPermissionError=Erreur s\u00e9curit\u00e9 : pour supprimer une classification d'acteur il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.
+PartyRemovePartyRelationshipPermissionError=Erreur s\u00e9curit\u00e9 : pour supprimer une relation inter-acteurs il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.
+PartyRemovePostalAddressBoundaryPermissionError=Erreur s\u00e9curit\u00e9 : pour supprimer une adresse postale fronti\u00e8re il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.
+PartyRemoveWebSiteRolePermissionError=Erreur s\u00e9curit\u00e9 : pour supprimer un r\u00f4le de site web il faut avoir avoir la permission PARTYMGR_DELETE ou PARTYMGR_ADMIN.
 PartyRole=R\u00f4le
 PartyRoleType=R\u00f4le de l'acteur
 PartyRoleTypeFrom=R\u00f4le de
-PartyRoleTypeId=Id Type de r\u00f4le
+PartyRoleTypeId=R\u00e9f\u00e9rence Type de r\u00f4le
 PartyRoleTypeTo=R\u00f4le \u00e0
 PartyRoles=R\u00f4le(s)
 PartySecurityGroups=Groupe de s\u00e9curit\u00e9
 PartySecurityGroupId=Ident. groupe de s\u00e9curit\u00e9 
 PartySecurityGroupsList=Liste des groupes de s\u00e9curit\u00e9
-PartySecurityViewPermissionError=PartySecurityViewPermissionError Vous n'avez pas la permission de voir cette page. ("SECURITY_VIEW" ou "SECURITY_ADMIN" est n\u00e9cessaire)
+PartySecurityViewPermissionError=Error Vous n'avez pas la permission de voir cette page. ("SECURITY_VIEW" ou "SECURITY_ADMIN" est n\u00e9cessaire)
 PartySelectContactType=S\u00e9lectionner un type de coordonn\u00e9es
 PartySelectRoleForParty=Choisir un ou plusieurs r\u00f4les pour cet acteur
 PartyServer=Server
@@ -287,39 +294,41 @@ PartyShowOld=Historique
 PartySize=Taille
 PartySocialSecurityNumber=Num\u00e9ro de s\u00e9curit\u00e9 sociale
 PartyStartTime=D\u00e9but de la transaction
-PartyState=Etat/Province
-PartyStateInUsMissing=Etat absent, et il est obligatoire pour une adresse au Etat-Unis.
+#PartyState=Etat/Province
+#PartyStateInUsMissing=Etat absent, et il est obligatoire pour une adresse aux Etat-Unis.
 PartyStatus=Statut
 PartySuffix=Suffixe
 PartySupplier=Fournisseur
 PartyStillActive=Encore active
+PartyTelecom=Contact t\u00e9l\u00e9phonique
 PartyTerm=Terme
-PartyTermTyp=Type de terme
+PartyTermTyp=Type de termes
 PartyTermValue=Valeur du terme
 PartyTerms=Termes
 PartyTheProfileOf=Le profil de
 PartyTime=Temps
 PartyToName=Nom
-PartyTotalYearsWorkNotValidNumber=Le nombre total d'ann\u00e9e d'exp\u00e9rience n'est pas un nombre valide.
+PartyTotalYearsWorkNotValidNumber=Le nombre total d'ann\u00e9es d'exp\u00e9rience n'est pas un nombre valide.
 PartyType=Type
-PartyUpdateCommunicationEventPermissionError=Erreur s\u00e9curit\u00e9: pour mettre \u00e0 jour une communication il faut avoir avoir la permission PARTYMGR_UPDATE ou PARTYMGR_ADMIN.<br>
-PartyUpdateWebSiteRolePermissionError=Erreur s\u00e9curit\u00e9: pour mettre \u00e0 jour un r\u00f4le de site web il faut avoir avoir la permission PARTYMGR_UPDATE ou PARTYMGR_ADMIN.<br>
+PartyTypeId=Type dentifiant
+PartyUpdateCommunicationEventPermissionError=Erreur s\u00e9curit\u00e9: pour mettre \u00e0 jour une communication, il faut avoir avoir la permission PARTYMGR_UPDATE ou PARTYMGR_ADMIN.
+PartyUpdateWebSiteRolePermissionError=Erreur s\u00e9curit\u00e9: pour mettre \u00e0 jour un r\u00f4le de site web, il faut avoir avoir la permission PARTYMGR_UPDATE ou PARTYMGR_ADMIN.
 PartyURI=URI
 PartyUserCreated=Cr\u00e9ation d'un utilisateur
 PartyUserLogin=Utilisateur de connexion
 PartyUserLogins=Utilisateurs de connexion
-PartyUserLoginId=Utilisateur de connexion
+PartyUserLoginId=R\u00e9f\u00e9rence Utilisateur de connexion
 PartyUserLoginsForSecurityGroup=Utilisateur de connexion pour le groupe de s\u00e9curit\u00e9 avec l'ident.
-PartyUserName=Nom utilisateur(s)
+PartyUserName=Nom d'utilisateur
 PartyUserNameMissing=Nom d'utilisateur absent
 PartyVendor=Fournisseur
-PartyVendorInformation=Information fournisseur
+PartyVendorInformation=Information Fournisseur
 PartyViewPostalAddressBoundaryPermissionError=Erreur s\u00e9curit\u00e9: pour obtenir une adresse postale fronti\u00e8re il faut avoir avoir la permission PARTYMGR_VIEW ou PARTYMGR_ADMIN.<br>
 PartyVisits=Connexions
 PartyVisitDetail= D\u00e9tail des visites
 PartyVisitId=Ident. connexion
 PartyVisitIDSessionID=Ident. de la visite / de la session 
-PartyVisitListing=Liste des connexionx
+PartyVisitListing=Liste des connexions
 PartyWeight=Poids
 PartyWeightNotValidNumber=Le poids n'est pas un nombre valide
 PartyWebApp=Appli. Web
