Applied patches from Jean-Luc Malet and Jacques Le Roux for improved l10n; Jira #OFBIZ-297
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5214 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels_fr.properties
+++ b/framework/common/config/CommonUiLabels_fr.properties
@@ -115,6 +115,7 @@ CommonDebit=D\u00E9bit
 CommonDecember=D\u00E9cembre
 CommonDelete=Supprimer
 CommonDeleteAll=Tout supprimer
+CommonDepth=Profondeur
 CommonDescription=Description
 CommonDetail=D\u00E9tail
 CommonDetails=D\u00E9tails
@@ -140,7 +141,7 @@ CommonFind=Rechercher
 CommonFindAll=Rech. tous
 CommonFinishDate=Date de fin
 CommonFollowingErrorsOccurred=Les erreurs suivantes sont apparues
-CommonFollowingOccurred=Ce qui suit est apparu
+CommonFollowingOccurred=Ce qui suit s'est produit
 CommonFor=pour
 CommonForgotYourPassword=Vous avez oubli\u00E9 votre mot de passe
 CommonFormatDateFieldNotCorrect=La saisie d'un champ de date est incorrecte, le format doit-\u00eatre AAAA-mm-jj HH:mm:ss
@@ -158,6 +159,7 @@ CommonGetPasswordHint=Voir votre aide pour le mot de passe
 CommonGoBack=Retour
 CommonGotoParent=Aller au niveau sup\u00E9rieur
 CommonGroup=Groupe
+CommonHeight=Hauteur
 CommonHideFields=Cacher les zones de s\u00E9lection
 CommonHour=Heure
 CommonId=R\u00E9f.
@@ -342,10 +344,12 @@ CommonViewRequest=Voir la requ\u00eate
 CommonVolume=Volume
 CommonWednesday=mercredi
 CommonWeek=semaine
+CommonWeight=Poids
 CommonWelcome=Bienvenue
 CommonWhere=O\u00F9
-CommonWorkflowActivityUser=Actions du workflow associ\u00E9es \u00E0 l'utilisateur
-CommonWorkflowActivityUserRole=Actions du workflow associ\u00E9es au r\u00F4le de l'utilisateur
+CommonWidth=Largeur
+CommonWorkflowActivityUser=Actions du workflow associ\u00E9s \u00E0 l'utilisateur
+CommonWorkflowActivityUserRole=Actions du workflow associ\u00E9s au r\u00F4le de l'utilisateur
 CommonY=O
 CommonYes=Oui
 CommonYouremail=Votre email
