Applied patch from Jacques Le Roux for small label corrections; Jira #OFBIZ-315
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5282 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/ecommerce/config/EcommerceUiLabels_fr.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels_fr.properties
@@ -61,7 +61,7 @@ AccountingPayWithPayPal=Paiement avec PayPal
 AccountingPayWithWorldPay=Paiement avec WorldPay
 AccountingPaymentInformation=Information sur le paiement
 AccountingPaymentMethodInformation=Information sur la m\u00E9thode de paiement
-AccountingPaymentVia=Paiement Via\u0009
+AccountingPaymentVia=Paiement Via
 AccountingPhysicalCard=Carte r\u00E9elle
 AccountingRoutingNumber=Num\u00E9ro de transfert
 AccountingSingleUseCreditCard=Usage unique de la carte de cr\u00E9dit
@@ -109,7 +109,7 @@ EcommerceContentName=Nom du contenu
 EcommerceContinueShopping=Continuer les achats
 EcommerceCustomerReviews=Commentaire(s) de client(s)
 EcommerceCustomerTaxID=Identifiant taxe du client
-EcommerceDataResourceId=Ref. de ressource de donn\u00E9es
+EcommerceDataResourceId=R\u00E9f. de ressource de donn\u00E9es
 EcommerceDetailsButton=[D\u00E9tails]
 EcommerceEcommerce=Commerce \u00E9lectronique
 EcommerceEmptyBody=Corps du message vide
