Applied patch from Jean-Luc Malet based on work from Jerome with various i18n and l10n enhancements; Jira #OFBIZ-322
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5284 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels_fr.properties
+++ b/framework/common/config/CommonUiLabels_fr.properties
@@ -256,7 +256,7 @@ CommonRefresh=Rafra\u00EEchir
 CommonRegistred=Enregistrement connexion utilisateur
 CommonRejected=Refus\u00E9
 CommonRemove=Supprimer
-CommonRemoveExpired=Supp. les <expir\u00E9s>
+CommonRemoveExpired=Supp. les expir\u00E9s
 CommonReports=Etats
 CommonRequired=Obligatoire
 CommonRequiredFieldsFoundEmpty=Champs obligatoires vides
@@ -304,6 +304,7 @@ CommonSubmit=Soumettre
 CommonSunday=dimanche
 CommonTellAFriend=Dites-le \u00e0 un ami
 CommonTest=Test
+CommonThe=le
 CommonTheFollowingErrorsOccurred=Les erreurs suivantes sont apparues
 CommonTheFollowingOccurred=Ceci est advenu
 CommonTheFollowingRequiredFieldsWhereFoundEmpty=Les champs suivants sont vides
